--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,26 @@
 # H2 Database Configuration (Development)
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE;
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=guilherme
 spring.datasource.password=guigab0409
+
+spring.datasource.initialization-mode=always
 spring.datasource.platform=h2
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+
+# Encoding Configuration
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+
+# Swagger Configuration
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/medway
