--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,25 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# dependencies
+public/node_modules
+public/.pnp
+public/.pnp.js
+
+# testing
+public/coverage
+
+# production
+public/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+public/npm-debug.log*
+public/yarn-debug.log*
+public/yarn-error.log*
