--- a/.gitignore
+++ b/.gitignore
@@ -33,23 +33,21 @@ build/
 .vscode/
 
 # dependencies
-public/node_modules
-public/.pnp
-public/.pnp.js
+web/node_modules
+web/.pnp
+web/.pnp.js
+web/.next
 
 # testing
-public/coverage
+web/coverage
 
 # production
-public/build
+web/build
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
 
-public/npm-debug.log*
-public/yarn-debug.log*
-public/yarn-error.log*
+web/npm-debug.log*
+web/yarn-debug.log*
+web/yarn-error.log*
