feat: altera database para supabase

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,24 +1,20 @@
-# H2 Database Configuration (Development)
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE;
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=guilherme
-spring.datasource.password=guigab0409
-
-spring.datasource.initialization-mode=always
-spring.datasource.platform=h2
-spring.h2.console.enabled=true
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://aws-0-sa-east-1.pooler.supabase.com:6543/postgres
+spring.datasource.username=postgres.bbrzwpgnjlkwwcelqzqy
+spring.datasource.password=Guigab0409.
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
 # Encoding Configuration
-spring.http.encoding.charset=UTF-8
-spring.http.encoding.enabled=true
-spring.http.encoding.force=true
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
 
 # Swagger Configuration
 springdoc.swagger-ui.enabled=true
